affine/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine
  namespace: affine
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "affine.internal.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: affine
          port: 3010
